--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-id-swiper": "^2.1.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "swiper": "^4.5.0",
     "woocommerce-api": "^1.4.2"
   },
   "scripts": {
