--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-id-swiper": "^2.1.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-searchkit": "^0.4.0",
     "swiper": "^4.5.0",
     "woocommerce-api": "^1.4.2"
   },
